test/test_examples/syntactic_examples/syntax_error/error_statement_16.zig
// Syntax error: missing "const/var" in variable definition

const ifj = @import("ifj24.zig"); 

pub fn main() void {
    x : i32 = 5;
}